src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: "Karla", sans-serif;
}
.app {
  background: url("./assets/cold-bg.jpg") no-repeat bottom;
  background-size: cover;
  transition: 0.4s ease-out;
}
.app.warm {
  background: url("./assets/warm-bg.jpg") no-repeat bottom;
  background-size: cover;
  transition: 0.4s ease-out;
}
.app.hot {
  background: url("./assets/hot-bg.jpg") no-repeat bottom;
  background-size: cover;
  transition: 0.4s ease-out;
}
.app.very-cold {
  background: url("./assets/winter-bg.jpg") no-repeat bottom;
  background-size: cover;
  transition: 0.4s ease-out;
}
main {
  color: #fff;
  min-height: 100vh;
  background-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.2),
    rgba(0, 0, 0, 0.4)
  );
}
.search-box {
  width: 100%;
  margin: 0 0 75px;
}
.search-box .search-bar {
  display: block;
  width: 100%;
  padding: 15px;
  appearance: none;
  background: none;
  border: none;
  outline: none;
  background-color: rgba(255, 255, 255, 0.5);
  border-radius: 4px;
  box-shadow: 3px 6px 8px -2px rgba(0, 0, 0, 0.75);
  -webkit-box-shadow: 3px 6px 8px -2px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 3px 6px 8px -2px rgba(0, 0, 0, 0.75);
  color: #313131;
  font-size: 20px;
  transition: 0.4s ease;
}
.search-box .search-bar:focus {
  background-color: rgba(255, 255, 255, 0.75);
}
.container {
  display: flex;
  align-items: center;
  align-content: center;
  flex-direction: column;
}
.location-box .location {
  color: #fff;
  font-size: 50px;
  font-weight: 700;
  text-align: center;
  text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
  letter-spacing: 1px;
  display: flex;
}
.date {
  text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
  font-size: 24px;
  font-weight: 100;
  font-style: italic;
  letter-spacing: 1px;
  text-align: center;
}
.weather-box .temp {
  background-color: rgba(255, 255, 255, 0.2);
  padding: 15px 25px;
  font-size: 102px;
  border-radius: 16px;
  margin: 30px auto;
  font-weight: 900;
  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
  text-align: center;
}
.weather {
  font-size: 30px;
  text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
  padding-bottom: 20px;
}
.weather-details {
  background: rgba(0, 0, 0, 0.5);
  padding: 20px;
  border-radius: 4px;
  font-size: 18px;
  text-transform: uppercase;
}
.location-name {
  display: inline-block;
  line-height: 90px;
}
.metric-btn {
  background-color: white;
  margin-top: 30px;
  padding: 10px 25px;
  text-align: center;
  text-transform: uppercase;
  color: #000;
  border-radius: 10px;
  display: block;
  border: none;
}
.metric-btn:hover {
  cursor: pointer;
  background-color: #000;
  color: #fff;
}
.img-wrap {
  background-color: rgba(255, 255, 255, 0.4);
  border-radius: 50%;
  margin-right: 20px;
}
.img-wrap img {
  display: block;
}

@media only screen and (max-width: 820px) {
  .img-wrap {
    height: 100%;
  }
  .location-name {
    font-size: 30px;
  }
  .metric-btn {
    font-size: 16px;
  }
  .date {
    font-size: 18px;
  }
  .weather-details {
    margin-bottom: 30px;
  }
  .search-box {
    margin: 0 0 50px;
  }
} 

